<resources>
    <string name="app_name">AssignmentSatu</string>
    <string name="page_title"></string>
    <string name="content_description_share">This is share icon</string>
    <string name="content_description_favorite">This is favorite icon</string>
    <string name="menu_title">Deluxe Cheese Stuffed Crust Pizza Keju</string>
    <string name="menu_current_price">Rp146.000</string>
    <string name="discount">12%</string>
    <string name="menu_before_price"><strike>Rp128.480</strike></string>
    <string name="radio_button_desc">SERVICE CHARGE DINE IN</string>
    <string name="radio_button_price">2.000+</string>
    <string name="card_price_disc"><strike>Rp67.760</strike></string>
    <string name="card_price_normal">Rp77.000</string>
    <string name="card_title">Super Supreme Chicken Pan Pizza</string>
    <string name="deskripsi_produk_title">Deskripsi Produk</string>
    <string name="product_desc">Keju bertumpuk keju berlapis keju dengan saus tomat pizza! Siapa yang tak tergoda dengan gurihnya pizza 100% keju yang satu ini.</string>
    <string name="show_more_btn">Selengkapnya</string>
    <string name="service">Penyajian</string>
    <string name="service_detail">pilih 1</string>
    <string name="notes_title">Catatan Pesanan</string>
    <string name="notes_detail">opsional</string>
    <string name="notes_hint">Contoh: Minta Tissue, ya</string>
    <string name="rec_product">Produk Serupa</string>
    <string name="add_to_cart_btn">Go To Fragment Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank1_fragment">Hello blank 1 fragment</string>
    <string name="hello_blank2_fragment">Hello blank 2 fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_dialog_fragment">Enter Your Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>